api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api
  name: api
spec:
  replicas: 3 
  selector:
    matchLabels:
      app: api
  strategy: {}
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - image: ghcr.io/tsclabs-eu/learning-tracker-api:v1.1.0
        name: learning-tracker-api
        resources: {}
status: {}
