frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  strategy: {}
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - image: ghcr.io/tsclabs-eu/learning-tracker-frontend:v1.1.0
        name: learning-tracker-frontend
        resources: {}
status: {}
