mariadb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: mariadb
  name: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mariadb
    spec:
      volumes:
        - name: mariadb-data
          emptyDir: {}
      containers:
        - image: mariadb
          name: mariadb
          resources: {}
          volumeMounts:
            - name: mariadb-data
              mountPath: /var/lib/mysql
