api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api
  name: api
  namespace: learning
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: api
status:
  loadBalancer: {}
